fixed appconfig